--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cutColbyName)
 export(fillColbyName)
 export(findAllUniqueValues)
 export(findAllVarNames)
+export(getDateFeatures)
 export(getDateOffset)
 export(getVarNameFreq)
 export(getcrosstabledf)
